# kaya_robotics

./: .gitignore  convertCMD.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/kaya_bringup/: package.xml  setup.cfg  setup.py
src/kaya_bringup/launch/: bringup_launch.py  hardware_launch.py  software_launch.py
src/kaya_bringup/scripts/: init_hardware.sh  launch_robot.sh
src/kaya_camera_vision/: .gitignore  package.xml  setup.cfg  setup.py
src/kaya_camera_vision/cube_detection/: cube_detection_node.py  live_capture_node.py  motion_planning_subscriber.py
src/kaya_camera_vision/kaya_camera_vision/: cube_detection_node.py  motion_planning_subscriber.py
src/kaya_camera_vision/launch/: cube_detection_launch.py
src/kaya_motion_planning/: package.xml  setup.cfg  setup.py
src/kaya_motion_planning/kaya_motion_planning/: input_simulator.py  motion_planner.py  trajectory_visualizer.py
src/kaya_motion_planning/launch/: motion_planning_launch.py
src/kaya_msgs/: CMakeLists.txt  package.xml
src/kaya_msgs/msg/: CubeInfo.msg
src/kaya_robot_control/: package.xml  setup.cfg  setup.py
src/kaya_robot_control/kaya_robot_control/: Basic control.py  Basic_control.py  convertCMD.py  create_motion.py  create_motion_controller.py  easy_check.py  teleop_qewasd.py  teleop_wasd.py
src/kaya_robot_control/launch/: robot_control_launch.py
src/kaya_state_machine/: package.xml  setup.cfg  setup.py
src/kaya_state_machine/kaya_state_machine/: main_node.py
src/kaya_state_machine/kaya_state_machine/states/: execution.py  idle.py  planning.py  scanning.py
src/kaya_state_machine/launch/: state_machine_launch.py
