<?xml version="1.0"?>
<package format="3">
  <name>kaya_bringup</name>
  <version>0.1.0</version>
  <description>Bringup for KAYA robot</description>
  <maintainer email="tmkristi@todo.todo">tmkristi</maintainer>
  <license>Apache-2.0</license>

  <!-- Runtime dependencies -->
  <exec_depend>ament_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>kaya_camera_vision</exec_depend>
  <exec_depend>kaya_motion_planning</exec_depend>
  <exec_depend>kaya_robot_control</exec_depend>
  <exec_depend>kaya_state_machine</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
